--- a/.classpath
+++ b/.classpath
@@ -1,7 +1,10 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
 	<classpathentry kind="src" path="src"/>
+	<classpathentry kind="src" path="teste"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/jre1.8.0_144"/>
 	<classpathentry kind="lib" path="src/lib/mysql-connector-java-5.1.45-bin.jar"/>
+	<classpathentry kind="lib" path="src/lib/mockito-core-2.13.0.jar"/>
+	<classpathentry kind="lib" path="src/lib/junit-4.12.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
